# pico-thing-main

./: .clang-format  CLAUDE.md  CMakeLists.txt  pico.cfg  rp2350.svd
chunk/: Makefile  acia_torture.asm  ascii.inc  assist09.asm  bss.asm  cchunk.ld  chunk.ld  cstart.asm  dat_torture.c  disk_test.c  diskload.c  dl.asm  embed.ld  foo.asm  get.asm  hello.c  ide.asm  ide.h  ide_lib.c  ide_lib.h  int.asm  io.asm  irq_test.asm  loop.asm  pico.c  pico.h  put.asm  putdec.asm  putdecb.asm  putdecd.asm  puthex.asm  puthexb.asm  puthexd.asm  stress_acia.c  stub.asm  syslib.asm  syslib.inc  syslib_flat.asm  test_echo.asm  test_echo_fast.asm  (+5 more)
docs/: pix-protocol.md  virtual-peripherals.md
extra/: api.asm  api.py  dbgmon.asm  download  irq_test  rel_dl  rel_picothing  serial_test.py  stress_acia.py
hardware/: .gitattributes  MC6809_DEVICES_GLUE.PLD  MC6809_IDE_ADDR_LATCH.PLD  MC6809_IDE_BUFFER_LOGIC.PLD  MC6809_PICO2_GLUE.PLD
host/: Makefile  server.c  server1.c  vendor_host.c  vendor_server.c
include/: build_time.h  command_parser.h  interrupt.h  mc6809.h  mc6840.h  mc6850.h  optional_usb.h  pico_thing.h  processor.h  registers.h  srec.h  status.h  task.h  tick_timer.h  tusb_config.h  uart.h  usb.h  vendor_if.h
src/: command_lexer.l  command_parser.y  mc6809.c  mc6809.cpp  mc6809.pio  mc6840.cpp  mc6850.cpp  optional_usb.c  pico_thing.cpp  pico_thing.pio  processor.cpp  registers.cpp  server.c  srec.c  task.c  tick_timer.cpp  uart.c  uart.cpp  usb.c  usb_descriptors.c  vendor_if.c
src/include/: mc6809.h  task.h  tusb_config.h  uart.h
tests/: CMakeLists.txt  cmd_parse_shim.c  test_command_parser.cpp  test_mc6840.cpp  test_mc6850.cpp  test_srec.cpp  test_tick_timer.cpp
tests/fake/: mc6809.h  pico_thing.h  registers.h
tests/fake/hardware/: pio.h  sync.h
tests/fake/pico/: assert.h  stdlib.h  time.h
tests/fake/pico/util/: queue.h
